@@ -65,6 +65,7 @@ t/110-register.t
 t/111-metadata_multi_pi_single_script.t
 t/112-metadata_multi_pi_multi_script.t
 t/113-metadata_multi_pi_multi_script_die.t
+t/114-metadata_multi_pi_multi_script_sigint.t
 t/115-pwm_spi_adc.t
 t/150-cleanup.t
 t/153-sig_handlers.t
@@ -116,6 +117,5 @@ t/multi/die_master.pl
 t/multi/die_slave.pl
 t/multi/full_master.pl
 t/multi/full_slave.pl
-t/multi/README
-t/README
-t/RPiTest.pm
+t/multi/int_master.pl
+t/multi/int_
