@@ -1,0 +1,4 @@
+#!/bin/sh
+
+perl t/multi/int_slave.pl &
+perl t/multi/int_master.pl
